# water-simulation-uni-project

./: Cargo.toml  README.md
backups/: BASE.rar  Backup_Bad_Calcs.rar
src/: camera.rs  draw_cache.rs  engine.rs  instance.rs  main.rs  render.rs  renderer.rs  simulation.rs  water.rs
src/engine/: camera.rs  input.rs  mesh.rs  water.rs
src/render/: dummy_vertex.rs  simulation.rs
src/render/shaders/: h0_spectrum.comp  ht_spectrum.comp  voxel.frag  voxel.vert  water.frag  water.vert
src/shaders/: conj_spec.comp  fast_fourier_transform.comp  fft_init.comp  h0_spec.comp  ht_spec.comp  init_spec.comp  texture_merger.comp  time_spec.comp  water.frag  water.vert
