[package]
name = "water-simulation-uni-project"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.12.1", features = [
    "derive",
    "extern_crate_std",
    "min_const_generics",
] }
# Be careful updating these, incase you break old code
nalgebra-glm = "0.20.0"
vulkano = "0.32.3"
vulkano-shaders = "0.32.0"
vulkano-win = "0.32.0"
winit = "0.27.3"
